--- a/src/app/pages/proveedores-cards/proveedores-cards.component.html
+++ b/src/app/pages/proveedores-cards/proveedores-cards.component.html
@@ -174,12 +174,12 @@
                 <i class="bi bi-box-seam me-1"></i>
                 <ng-container i18n="View products button">Ver Productos</ng-container>
               </button>
-              <button
+              <!-- <button
                 class="btn btn-outline-success btn-sm"
                 (click)="sincronizarPrecios(proveedor)">
                 <i class="bi bi-arrow-repeat me-1"></i>
                 <ng-container i18n="Sync prices button">Sincronizar Precios</ng-container>
-              </button>
+              </button> -->
               <button
                 class="btn btn-outline-danger btn-sm"
                 (click)="eliminarProveedor(proveedor)">
