--- a/src/app/pages/proveedores-cards/proveedores-cards.component.html
+++ b/src/app/pages/proveedores-cards/proveedores-cards.component.html
@@ -174,6 +174,11 @@
                 <i class="bi bi-box-seam me-1"></i>
                 <ng-container i18n="View products button">Ver Productos</ng-container>
               </button>
+               <button class="btn btn-outline-info btn-sm"
+                  (click)="abrirModalAgregarProductos(proveedor)">
+                   <i class="bi bi-plus-circle me-1"></i>
+                    Agregar más productos
+                </button>
               <!-- <button
                 class="btn btn-outline-success btn-sm"
                 (click)="sincronizarPrecios(proveedor)">
@@ -332,8 +337,9 @@
           <div class="modal-header bg-success text-white">
             <h5 class="modal-title" i18n="Sync products modal title">
               <i class="bi bi-box-seam me-2"></i>
-              Sincronizar Productos - {{ proveedorPendienteEscala?.name }}
+              {{ modoAgregarProductos ? 'Agregar más productos' : 'Sincronizar Productos' }} - {{ proveedorPendienteEscala?.name }}
             </h5>
+            <button type="button" class="btn-close btn-close-white" *ngIf="modoAgregarProductos" (click)="cerrarModalProductos()"></button>
           </div>
           <div class="modal-body">
             <div class="alert alert-info">
@@ -376,14 +382,20 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let producto of productosProveedorDisponibles">
+                  <tr *ngFor="let producto of productosProveedorDisponibles" [ngClass]="{'table-success': producto.yaSincronizado}">
                     <td class="text-center">
                       <input
                         class="form-check-input"
                         type="checkbox"
-                        [(ngModel)]="producto.seleccionado">
+                        [(ngModel)]="producto.seleccionado"
+                        [disabled]="producto.yaSincronizado">
                     </td>
-                    <td><code>{{ producto.barCode || producto.codigoBarra }}</code></td>
+                    <td>
+                      <code>{{ producto.barCode || producto.codigoBarra }}</code>
+                      <span *ngIf="producto.yaSincronizado" class="badge bg-success ms-2">
+                        <i class="bi bi-check-circle me-1"></i>Ya sincronizado
+                      </span>
+                    </td>
                     <td>{{ producto.name || producto.nombre }}</td>
                     <td class="text-center">
                       <span class="badge bg-success">${{ producto.price || producto.precio || 0 | number:'1.2-2' }}</span>
