--- a/src/app/pages/proveedores-cards/proveedores-cards.component.html
+++ b/src/app/pages/proveedores-cards/proveedores-cards.component.html
@@ -174,6 +174,12 @@
                 <i class="bi bi-box-seam me-1"></i>
                 <ng-container i18n="View products button">Ver Productos</ng-container>
               </button>
+              <button
+                class="btn btn-outline-warning btn-sm"
+                (click)="editarEscalasProveedor(proveedor)">
+                <i class="bi bi-star-fill me-1"></i>
+                <ng-container i18n="Edit rating scales button">Editar Escalas</ng-container>
+              </button>
               <!-- <button
                 class="btn btn-outline-success btn-sm"
                 (click)="sincronizarPrecios(proveedor)">
@@ -254,6 +260,13 @@
             </div>
           </div>
           <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              (click)="cerrarModalEscalas()"
+              i18n="Close modal button">
+              Cerrar
+            </button>
             <button
               type="button"
               class="btn btn-success"
