--- a/src/app/pages/pedidos-list/pedidos-list.component.html
+++ b/src/app/pages/pedidos-list/pedidos-list.component.html
@@ -1,7 +1,7 @@
   <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h2 class="mb-0" i18n="Orders page title">Pedidos</h2>
-      <button
+      <!-- <button
         class="btn btn-success"
         [disabled]="generandoPedido"
         (click)="generarPedidoAutomatico()">
@@ -13,7 +13,7 @@
           <span class="spinner-border spinner-border-sm me-2" role="status" aria-hidden="true"></span>
           Generando...
         </span>
-      </button>
+      </button> -->
     </div>
 
     <!-- Filtros -->
